--- a/app.wxss
+++ b/app.wxss
@@ -3,7 +3,7 @@
   background: #f2f3f5;
   width: 100%;
   height: 100vh;
-  padding: 40px 20px;
+  padding: 0 20px;
   box-sizing: border-box;
 }
 .btn{
@@ -18,5 +18,5 @@
   justify-content: space-between;
   margin-top: 10px;
   color: #3a3a3a;
-  font-size: 14px;
+  font-size: 15px;
 }
