--- a/components/tabbar/index.wxml
+++ b/components/tabbar/index.wxml
@@ -1,16 +1,16 @@
 <view>
     <view class="con">
-        <swiper current="{{current}}" bindchange="onChange">
-            <swiper-item wx:for="{{data}}" >
-            {{item.slot}}
-                <view class="swiper-item" slot="{{item.slot}}">
+        <swiper current="{{current}}" bindchange="onChange" class="swiper">
+            <swiper-item wx:for="{{data}}" wx:key="index">
+                <view class="swiper-item">
+                    <slot  name="{{item.slot}}"></slot>
                 </view>
             </swiper-item>
         </swiper>
     </view>
     <view class="tabbar">
-        <view wx:for="{{data}}" bindtap="jumpTo" class="tab" bindtab="onSwiper" data-index="{{index}}">
-            {{item.name}}
+        <view wx:for="{{data}}" wx:key="index" bindtap="onSwiper" data-index="{{index}}" class="{{current == index ? 'tab active': 'tab'}}" >
+            <span>{{item.name}}</span>
         </view>
     </view>
 </view>
