--- a/components/tabbar/index.wxss
+++ b/components/tabbar/index.wxss
@@ -14,3 +14,15 @@
     flex: 1;
     text-align: center;
 }
+.tab.active{
+    color: #1989fa;
+}
+.con{
+    height: calc(100vh - 50px);
+}
+.swiper,.swiper-item{
+    height: 100%;
+}
+.swiper-item{
+    padding: 20px 0;
+}
