--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,15 +3,32 @@
   width: 100%;
   color: #313234;
   font-size: 24px;
-  padding-left: 20px;
+  padding-left: 10px;
   box-sizing: border-box;
   font-weight: 500;
   float: left;
+  margin-top: 60px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.text{
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+.img{
+  width: 50px;
+  height: 50px;
+}
+.img>image{
+  width: 100%;
+  height: 100%;
 }
 .title{
   font-size: 12px;
   color: #929395;
   font-weight: 400;
+  padding-left: 10px;
 }
 .ul{
   width: 100%;
@@ -23,4 +40,11 @@
   width: 100%;
   margin-top: 20px;
   color: #3a3a3a;
+}
+.li:first-child{
+  margin-top: 30px;
+}
+.wean-text{
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-size: 16px;
 }
