--- a/pages/nav/index.wxml
+++ b/pages/nav/index.wxml
@@ -1,6 +1,6 @@
 <!--pages/nav/index.wxml-->
 <view class="nav">
-    <nav>
+    <nav data="{{data}}">
         <view slot="one">one</view>
         <view slot="two">two</view>
         <view slot="three">three</view>
