--- a/components/nav/index.wxss
+++ b/components/nav/index.wxss
@@ -27,3 +27,9 @@
     padding: 24px;
     box-sizing: border-box;
 }
+.swiper,.swiper-item{
+    height: 100%;
+}
+.swiper-item{
+    padding: 20px 0;
+}
