--- a/pages/canvas/cutimage/index.wxss
+++ b/pages/canvas/cutimage/index.wxss
@@ -13,6 +13,33 @@
     right: 0;
     margin: auto;
 }
+.bg-top,.bg-bottom{
+    width: calc(100% - 150rpx);
+    background: rgba(0,0,0,0.5);
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.bg-left,.bg-right{
+    width: 75rpx;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+}
+.bg-left{
+    left: 0;
+}
+.bg-right{
+    right: 0;
+}
+.bg-top{
+    top: 0;
+}
+.bg-bottom{
+    bottom: 0;
+}
 .new-canvas{
     width: 600rpx;
     height: 400rpx;
