--- a/app.wxss
+++ b/app.wxss
@@ -23,9 +23,9 @@
 .button{
   width: 100%;
   height: 44px;
-  background: #1989fa;
+  background:#f86767;
   border-radius: 2px;
-  border: 1px solid #1989fa;
+  border: 1px solid #f86767;
   font-size: 16px;
   font-family: PingFangSC-Regular, PingFang SC;
   font-weight: 400;
