--- a/pages/canvas/cutimage/index.wxml
+++ b/pages/canvas/cutimage/index.wxml
@@ -1,31 +1,24 @@
 <!--pages/date/index.wxml-->
-<view class="section">
-    <view wx:if="{{!cutView}}" class="section-main">
-         <button size="default" type="default" class="select-image"  bindtap="getImage">选择图片</button>
-         <button type="default" class="select-image" bindtap="saveImage">图片保存</button>
-         <canvas canvas-id="new-canvas"  class="new-canvas"></canvas>
+<view class="section" >
+    <!-- movable-area 是固定在屏幕中间的区域，movable-view 是可以缩放的整体屏幕部分 -->
+    <movable-area scale-area  wx:if="{{imageSrc}}" style="top:{{areaTop}}px;left:{{leftSize}}px" class="{{type == 1 ? 'movable-area active' : 'movable-area'}}" >
+        <!-- damping 设得很大是因为可能存在移动的时候回弹的问题 -->
+        <movable-view scale inertia damping="1000" direction="all" scale-min="1" style="width:{{initialWidth}}px;height:{{initialHeight}}px" 
+        x="{{initialX}}" y="{{initialY}}" bindchange="onChange" bindscale="onScale">
+            <image class="image" src="{{imageSrc}}" />
+        </movable-view>
+    </movable-area>
+    <!-- 这是裁剪框的样式 -->
+    <view style="width:{{clipSize}}px;height:{{clipSizeH}}px;top:{{areaTop}}px;left:{{leftSize}}px" class="{{type == 1 ? 'clip-box active' : 'clip-box'}}" >
+        <view class="left item" style="width:{{leftSize}}px;height:100vh;top:0;left:0"></view>
+        <view class="right item" style="width:{{leftSize}}px;height:100vh;top:0;right:0"></view>
+        <view class="top item" style="width:{{clipSize}}px;height:{{areaTop}}px;top:0;left:{{leftSize}}px"></view>
+        <view class="bpttom item" style="width:{{clipSize}}px;height:{{areaTop}}px;bottom:0;left:{{leftSize}}px"></view>
     </view>
-    <view class="cut-container" wx:else bindtouchstart="onTouchstart" bindtouchmove="onTouchmove" bindtouchend="onTouchend">
-        <canvas
-            canvas-id="canvas"
-            class="canvas"
-            style="width:{{canvasWidth}}px;height:{{canvasHeight}}px;left:{{img_left}}px;top:{{img_top}}px"
-        ></canvas>
-        <cover-view class="bg-top" style="height:{{mask_top_height}}px"></cover-view>
-        <cover-view class="bg-bottom" style="height:{{mask_bottom_height}}px"></cover-view>
-        <cover-view class="bg-left"></cover-view>
-        <cover-view class="bg-right"></cover-view>
-        <cover-view  class="line">
-        </cover-view>
-        <cover-view class="set">
-            <cover-view class="set-item" bindtap="cancle">
-                <!-- <image src="../../../assets/images/cancle.png" mode="widthFix"/> -->
-                取消
-            </cover-view>
-            <cover-view class="set-item"  mut-bind:tap="cutresult">
-                确定
-                <!-- <image src="../../../assets/images/sure.png" mode="widthFix"/> -->
-            </cover-view>
-        </cover-view>
-    </view>
+    <view class="bottom-btns">
+        <view class="cancel" bindtap="onClickCancel">取消</view>
+        <view class="complete" bindtap="onClickConfirm">完成</view>
+        </view>
+    <!-- 这个 canvas 是用来把导出裁剪后图片的 -->
+    <canvas wx:if="{{canvasSize}}" class="canvas" canvas-id="canvas" style="width:{{canvasSize}}px;height:{{canvasSizeH}}px;"></canvas>
 </view>
